cpusim64/src/generated-sources/antlr4/PreprocessorParser.java
// Generated from PreprocessorParser.g4 by ANTLR 4.13.2
package cloud.lesh.CPUSim64;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PreprocessorParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_COMMENT=1, LINE_COMMENT=2, LINE_CONT=3, WS=4, NL=5, PP_INCLUDE=6, 
		PP_DEFINE=7, PP_UNDEF=8, PP_CALL=9, PP_DEF_FUNC=10, PP_END_FUNC=11, PP_DEF_MACRO=12, 
		PP_END_MACRO=13, PP_MACRO=14, PP_GLOBAL=15, PP_SVAR=16, PP_VAR=17, PP_FVAR=18, 
		PP_RETURN=19, PP_FRETURN=20, PP_IF=21, PP_IFDEF=22, PP_IFNDEF=23, PP_ELSEIF=24, 
		PP_ELSE=25, PP_ENDIF=26, PP_FOR=27, PP_ENDFOR=28, PP_WHILE=29, PP_ENDWHILE=30, 
		PP_DOWHILE=31, PP_ENDDOWHILE=32, PP_BREAK=33, PP_CONTINUE=34, PP_IFCONDSR=35, 
		PP_IFCOND=36, PP_ELSEIFCOND=37, PP_ELSECOND=38, PP_ENDCOND=39, PP_SYNC=40, 
		PP_ENDSYNC=41, PP_INFO=42, PP_ERROR=43, REG_R=44, REG_F=45, PLACEHOLDER=46, 
		LABEL=47, IDENT=48, MEMREF=49, COMP_DIR=50, INT=51, FLOAT=52, CHAR=53, 
		STRING=54, ANGLE_PATH=55, EQEQ=56, NEQ=57, LE=58, GE=59, LT=60, GT=61, 
		COMMA=62, LPAREN=63, RPAREN=64, LBRACKET=65, RBRACKET=66, DOLLAR=67, LCURLY=68, 
		RCURLY=69, ELLIPSIS=70, COLON=71, PLUS=72, MINUS=73, MULTIPLY=74, DIVIDE=75, 
		BLOCK_COMMENT_I=76, LINE_COMMENT_I=77, WS_I=78, BLOCK_COMMENT_D=79, LINE_COMMENT_D=80, 
		WS_D=81, INFO_TEXT=82;
	public static final int
		RULE_preproc = 0, RULE_codeLine = 1, RULE_directive = 2, RULE_infoDir = 3, 
		RULE_errorDir = 4, RULE_includeDir = 5, RULE_defineDir = 6, RULE_undefDir = 7, 
		RULE_callDir = 8, RULE_macroDir = 9, RULE_argList = 10, RULE_callArg = 11, 
		RULE_defFuncDir = 12, RULE_defMacroDir = 13, RULE_paramList = 14, RULE_globalDir = 15, 
		RULE_svarDir = 16, RULE_varDir = 17, RULE_fvarDir = 18, RULE_identList = 19, 
		RULE_returnDir = 20, RULE_freturnDir = 21, RULE_ifBlock = 22, RULE_ifDefBlock = 23, 
		RULE_ifNDefBlock = 24, RULE_elseifClause = 25, RULE_elseClause = 26, RULE_forBlock = 27, 
		RULE_whileBlock = 28, RULE_doWhileBlock = 29, RULE_breakDir = 30, RULE_continueDir = 31, 
		RULE_ifCondBlock = 32, RULE_ifCondSRBlock = 33, RULE_elseifCondClause = 34, 
		RULE_elseCondClause = 35, RULE_syncBlock = 36, RULE_block = 37, RULE_expr = 38, 
		RULE_primary = 39, RULE_cmpOp = 40, RULE_literal = 41, RULE_constExpr = 42, 
		RULE_atom = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"preproc", "codeLine", "directive", "infoDir", "errorDir", "includeDir", 
			"defineDir", "undefDir", "callDir", "macroDir", "argList", "callArg", 
			"defFuncDir", "defMacroDir", "paramList", "globalDir", "svarDir", "varDir", 
			"fvarDir", "identList", "returnDir", "freturnDir", "ifBlock", "ifDefBlock", 
			"ifNDefBlock", "elseifClause", "elseClause", "forBlock", "whileBlock", 
			"doWhileBlock", "breakDir", "continueDir", "ifCondBlock", "ifCondSRBlock", 
			"elseifCondClause", "elseCondClause", "syncBlock", "block", "expr", "primary", 
			"cmpOp", "literal", "constExpr", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCK_COMMENT", "LINE_COMMENT", "LINE_CONT", "WS", "NL", "PP_INCLUDE", 
			"PP_DEFINE", "PP_UNDEF", "PP_CALL", "PP_DEF_FUNC", "PP_END_FUNC", "PP_DEF_MACRO", 
			"PP_END_MACRO", "PP_MACRO", "PP_GLOBAL", "PP_SVAR", "PP_VAR", "PP_FVAR", 
			"PP_RETURN", "PP_FRETURN", "PP_IF", "PP_IFDEF", "PP_IFNDEF", "PP_ELSEIF", 
			"PP_ELSE", "PP_ENDIF", "PP_FOR", "PP_ENDFOR", "PP_WHILE", "PP_ENDWHILE", 
			"PP_DOWHILE", "PP_ENDDOWHILE", "PP_BREAK", "PP_CONTINUE", "PP_IFCONDSR", 
			"PP_IFCOND", "PP_ELSEIFCOND", "PP_ELSECOND", "PP_ENDCOND", "PP_SYNC", 
			"PP_ENDSYNC", "PP_INFO", "PP_ERROR", "REG_R", "REG_F", "PLACEHOLDER", 
			"LABEL", "IDENT", "MEMREF", "COMP_DIR", "INT", "FLOAT", "CHAR", "STRING", 
			"ANGLE_PATH", "EQEQ", "NEQ", "LE", "GE", "LT", "GT", "COMMA", "LPAREN", 
			"RPAREN", "LBRACKET", "RBRACKET", "DOLLAR", "LCURLY", "RCURLY", "ELLIPSIS", 
			"COLON", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "BLOCK_COMMENT_I", "LINE_COMMENT_I", 
			"WS_I", "BLOCK_COMMENT_D", "LINE_COMMENT_D", "WS_D", "INFO_TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PreprocessorParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PreprocessorParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PreprocContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PreprocessorParser.EOF, 0); }
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public List<CodeLineContext> codeLine() {
			return getRuleContexts(CodeLineContext.class);
		}
		public CodeLineContext codeLine(int i) {
			return getRuleContext(CodeLineContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(PreprocessorParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(PreprocessorParser.NL, i);
		}
		public PreprocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preproc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterPreproc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitPreproc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorParserVisitor ) return ((PreprocessorParserVisitor<? extends T>)visitor).visitPreproc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreprocContext preproc() throws RecognitionException {
		PreprocContext _localctx = new PreprocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_preproc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1562537707427808L) != 0)) {
				{
				setState(91);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PP_INCLUDE:
				case PP_DEFINE:
				case PP_UNDEF:
				case PP_CALL:
				case PP_DEF_FUNC:
				case PP_DEF_MACRO:
				case PP_MACRO:
				case PP_GLOBAL:
				case PP_SVAR:
				case PP_VAR:
				case PP_FVAR:
				case PP_RETURN:
				case PP_FRETURN:
				case PP_IF:
				case PP_IFDEF:
				case PP_IFNDEF:
				case PP_FOR:
				case PP_WHILE:
				case PP_DOWHILE:
				case PP_BREAK:
				case PP_CONTINUE:
				case PP_IFCONDSR:
				case PP_IFCOND:
				case PP_SYNC:
				case PP_INFO:
				case PP_ERROR:
					{
					setState(88);
					directive();
					}
					break;
				case LABEL:
				case IDENT:
				case COMP_DIR:
					{
					setState(89);
					codeLine();
					}
					break;
				case NL:
					{
					setState(90);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeLineContext extends ParserRuleContext {
		public Token LABEL;
		public List<Token> more = new ArrayList<Token>();
		public Token IDENT;
		public Token COMP_DIR;
		public Token _tset58;
		public Token COMMA;
		public Token LBRACKET;
		public Token RBRACKET;
		public Token PLUS;
		public Token PLACEHOLDER;
		public Token REG_R;
		public Token REG_F;
		public Token MEMREF;
		public Token STRING;
		public Token CHAR;
		public Token _tset78;
		public ConstExprContext constExpr;
		public List<ConstExprContext> moreExpr = new ArrayList<ConstExprContext>();
		public TerminalNode NL() { return getToken(PreprocessorParser.NL, 0); }
		public TerminalNode LABEL() { return getToken(PreprocessorParser.LABEL, 0); }
		public List<TerminalNode> IDENT() { return getTokens(PreprocessorParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PreprocessorParser.IDENT, i);
		}
		public List<TerminalNode> COMP_DIR() { return getTokens(PreprocessorParser.COMP_DIR); }
		public TerminalNode COMP_DIR(int i) {
			return getToken(PreprocessorParser.COMP_DIR, i);
		}
		public List<TerminalNode> LINE_CONT() { return getTokens(PreprocessorParser.LINE_CONT); }
		public TerminalNode LINE_CONT(int i) {
			return getToken(PreprocessorParser.LINE_CONT, i);
		}
		public List<ConstExprContext> constExpr() {
			return getRuleContexts(ConstExprContext.class);
		}
		public ConstExprContext constExpr(int i) {
			return getRuleContext(ConstExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PreprocessorParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PreprocessorParser.COMMA, i);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(PreprocessorParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(PreprocessorParser.LBRACKET, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(PreprocessorParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(PreprocessorParser.RBRACKET, i);
		}
		public List<TerminalNode> PLUS() { return getTokens(PreprocessorParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(PreprocessorParser.PLUS, i);
		}
		public List<TerminalNode> PLACEHOLDER() { return getTokens(PreprocessorParser.PLACEHOLDER); }
		public TerminalNode PLACEHOLDER(int i) {
			return getToken(PreprocessorParser.PLACEHOLDER, i);
		}
		public List<TerminalNode> REG_R() { return getTokens(PreprocessorParser.REG_R); }
		public TerminalNode REG_R(int i) {
			return getToken(PreprocessorParser.REG_R, i);
		}
		public List<TerminalNode> REG_F() { return getTokens(PreprocessorParser.REG_F); }
		public TerminalNode REG_F(int i) {
			return getToken(PreprocessorParser.REG_F, i);
		}
		public List<TerminalNode> MEMREF() { return getTokens(PreprocessorParser.MEMREF); }
		public TerminalNode MEMREF(int i) {
			return getToken(PreprocessorParser.MEMREF, i);
		}
		public List<TerminalNode> STRING() { return getTokens(PreprocessorParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(PreprocessorParser.STRING, i);
		}
		public List<TerminalNode> CHAR() { return getTokens(PreprocessorParser.CHAR); }
		public TerminalNode CHAR(int i) {
			return getToken(PreprocessorParser.CHAR, i);
		}
		public CodeLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterCodeLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitCodeLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorParserVisitor ) return ((PreprocessorParserVisitor<? extends T>)visitor).visitCodeLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeLineContext codeLine() throws RecognitionException {
		CodeLineContext _localctx = new CodeLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_codeLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((CodeLineContext)_localctx)._tset58 = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1548112371908608L) != 0)) ) {
				((CodeLineContext)_localctx)._tset58 = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			((CodeLineContext)_localctx).more.add(((CodeLineContext)_localctx)._tset58);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4575815551082823672L) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 387L) != 0)) {
				{
				{
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LINE_CONT) {
					{
					setState(99);
					match(LINE_CONT);
					}
				}

				setState(104);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(102);
					((CodeLineContext)_localctx)._tset78 = _input.LT(1);
					_la = _input.LA(1);
					if ( !(((((_la - 44)) & ~0x3f) == 0 && ((1L << (_la - 44)) & 274990711L) != 0)) ) {
						((CodeLineContext)_localctx)._tset78 = (Token)_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					((CodeLineContext)_localctx).more.add(((CodeLineContext)_localctx)._tset78);
					}
					break;
				case 2:
					{
					setState(103);
					((CodeLineContext)_localctx).constExpr = constExpr(0);
					((CodeLineContext)_localctx).moreExpr.add(((CodeLineContext)_localctx).constExpr);
					}
					break;
				}
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DirectiveContext extends ParserRuleContext {
		public IncludeDirContext includeDir() {
			return getRuleContext(IncludeDirContext.class,0);
		}
		public DefineDirContext defineDir() {
			return getRuleContext(DefineDirContext.class,0);
		}
		public UndefDirContext undefDir() {
			return getRuleContext(UndefDirContext.class,0);
		}
		public CallDirContext callDir() {
			return getRuleContext(CallDirContext.class,0);
		}
		public DefFuncDirContext defFuncDir() {
			return getRuleContext(DefFuncDirContext.class,0);
		}
		public DefMacroDirContext defMacroDir() {
			return getRuleContext(DefMacroDirContext.class,0);
		}
		public MacroDirContext macroDir() {
			return getRuleContext(MacroDirContext.class,0);
		}
		public GlobalDirContext globalDir() {
			return getRuleContext(GlobalDirContext.class,0);
		}
		public SvarDirContext svarDir() {
			return getRuleContext(SvarDirContext.class,0);
		}
		public VarDirContext varDir() {
			return getRuleContext(VarDirContext.class,0);
		}
		public FvarDirContext fvarDir() {
			return getRuleContext(FvarDirContext.class,0);
		}
		public ReturnDirContext returnDir() {
			return getRuleContext(ReturnDirContext.class,0);
		}
		public FreturnDirContext freturnDir() {
			return getRuleContext(FreturnDirContext.class,0);
		}
		public IfBlockContext ifBlock() {
			return getRuleContext(IfBlockContext.class,0);
		}
		public IfDefBlockContext ifDefBlock() {
			return getRuleContext(IfDefBlockContext.class,0);
		}
		public IfNDefBlockContext ifNDefBlock() {
			return getRuleContext(IfNDefBlockContext.class,0);
		}
		public ForBlockContext forBlock() {
			return getRuleContext(ForBlockContext.class,0);
		}
		public WhileBlockContext whileBlock() {
			return getRuleContext(WhileBlockContext.class,0);
		}
		public DoWhileBlockContext doWhileBlock() {
			return getRuleContext(DoWhileBlockContext.class,0);
		}
		public BreakDirContext breakDir() {
			return getRuleContext(BreakDirContext.class,0);
		}
		public ContinueDirContext continueDir() {
			return getRuleContext(ContinueDirContext.class,0);
		}
		public IfCondBlockContext ifCondBlock() {
			return getRuleContext(IfCondBlockContext.class,0);
		}
		public IfCondSRBlockContext ifCondSRBlock() {
			return getRuleContext(IfCondSRBlockContext.class,0);
		}
		public SyncBlockContext syncBlock() {
			return getRuleContext(SyncBlockContext.class,0);
		}
		public InfoDirContext infoDir() {
			return getRuleContext(InfoDirContext.class,0);
		}
		public ErrorDirContext errorDir() {
			return getRuleContext(ErrorDirContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitDirective(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorParserVisitor ) return ((PreprocessorParserVisitor<? extends T>)visitor).visitDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_directive);
		try {
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PP_INCLUDE:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				includeDir();
				}
				break;
			case PP_DEFINE:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				defineDir();
				}
				break;
			case PP_UNDEF:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				undefDir();
				}
				break;
			case PP_CALL:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				callDir();
				}
				break;
			case PP_DEF_FUNC:
				enterOuterAlt(_localctx, 5);
				{
				setState(117);
				defFuncDir();
				}
				break;
			case PP_DEF_MACRO:
				enterOuterAlt(_localctx, 6);
				{
				setState(118);
				defMacroDir();
				}
				break;
			case PP_MACRO:
				enterOuterAlt(_localctx, 7);
				{
				setState(119);
				macroDir();
				}
				break;
			case PP_GLOBAL:
				enterOuterAlt(_localctx, 8);
				{
				setState(120);
				globalDir();
				}
				break;
			case PP_SVAR:
				enterOuterAlt(_localctx, 9);
				{
				setState(121);
				svarDir();
				}
				break;
			case PP_VAR:
				enterOuterAlt(_localctx, 10);
				{
				setState(122);
				varDir();
				}
				break;
			case PP_FVAR:
				enterOuterAlt(_localctx, 11);
				{
				setState(123);
				fvarDir();
				}
				break;
			case PP_RETURN:
				enterOuterAlt(_localctx, 12);
				{
				setState(124);
				returnDir();
				}
				break;
			case PP_FRETURN:
				enterOuterAlt(_localctx, 13);
				{
				setState(125);
				freturnDir();
				}
				break;
			case PP_IF:
				enterOuterAlt(_localctx, 14);
				{
				setState(126);
				ifBlock();
				}
				break;
			case PP_IFDEF:
				enterOuterAlt(_localctx, 15);
				{
				setState(127);
				ifDefBlock();
				}
				break;
			case PP_IFNDEF:
				enterOuterAlt(_localctx, 16);
				{
				setState(128);
				ifNDefBlock();
				}
				break;
			case PP_FOR:
				enterOuterAlt(_localctx, 17);
				{
				setState(129);
				forBlock();
				}
				break;
			case PP_WHILE:
				enterOuterAlt(_localctx, 18);
				{
				setState(130);
				whileBlock();
				}
				break;
			case PP_DOWHILE:
				enterOuterAlt(_localctx, 19);
				{
				setState(131);
				doWhileBlock();
				}
				break;
			case PP_BREAK:
				enterOuterAlt(_localctx, 20);
				{
				setState(132);
				breakDir();
				}
				break;
			case PP_CONTINUE:
				enterOuterAlt(_localctx, 21);
				{
				setState(133);
				continueDir();
				}
				break;
			case PP_IFCOND:
				enterOuterAlt(_localctx, 22);
				{
				setState(134);
				ifCondBlock();
				}
				break;
			case PP_IFCONDSR:
				enterOuterAlt(_localctx, 23);
				{
				setState(135);
				ifCondSRBlock();
				}
				break;
			case PP_SYNC:
				enterOuterAlt(_localctx, 24);
				{
				setState(136);
				syncBlock();
				}
				break;
			case PP_INFO:
				enterOuterAlt(_localctx, 25);
				{
				setState(137);
				infoDir();
				}
				break;
			case PP_ERROR:
				enterOuterAlt(_localctx, 26);
				{
				setState(138);
				errorDir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfoDirContext extends ParserRuleContext {
		public TerminalNode PP_INFO() { return getToken(PreprocessorParser.PP_INFO, 0); }
		public TerminalNode INFO_TEXT() { return getToken(PreprocessorParser.INFO_TEXT, 0); }
		public List<TerminalNode> NL() { return getTokens(PreprocessorParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(PreprocessorParser.NL, i);
		}
		public InfoDirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infoDir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).enterInfoDir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PreprocessorParserListener ) ((PreprocessorParserListener)listener).exitInfoDir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PreprocessorParserVisitor ) return ((PreprocessorParserVisitor<? extends T>)visitor).visitInfoDir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfoDirContext infoDir() throws RecognitionException {
		InfoDirContext _localctx = new InfoDirContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_infoDir);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(PP_INFO);
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INFO_TEXT) {
				{
				setState(142);
				match(INFO_TEXT);
				}
			}
